# pewpew

./: Cargo.toml
src/: game.rs  main.rs
src/camera/: main.rs
src/encounter/: arena.rs  controls.rs  enemy.rs  mod.rs  player.rs  projectile.rs
src/encounter/arena/: enemy.rs  health.rs  mod.rs  player.rs  projectile.rs  ui.rs
src/encounter/component/: mod.rs  weapon.rs
src/encounter/component/weapon/: parameters.rs
src/encounter/ui/: arena_ui.rs  mod.rs  pause_menu.rs
src/game_over/: ui.rs
src/global/: main_camera.rs  main_window.rs  mod.rs
src/main_menu/: ui.rs
src/pause/: mod.rs  ui.rs
src/ui/: main_menu.rs
src/util/: mod.rs
